fixed styling on mobile - final commit

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     flex-direction: column;
 }
 
-
 section {
 display: grid;
 grid-template-columns: repeat(4, 8rem);
@@ -48,3 +47,13 @@ perspective: 800PX;
 .face{
     transform: rotateY(-180deg)
 }
+
+@media screen and (max-width: 600px) {
+    section {
+        display: grid;
+        grid-template-columns: repeat(4, 4rem);
+        grid-template-rows: repeat(4, 4rem);
+        grid-gap: 2rem;
+        perspective: 800PX;
+        }
+  }
